[Fix] Bugs related to Java 8 source compatibility.
Signed-off-by: Paul Amonson <paul.d.amonson@intel.com>